apps/home-services/minecraft-bluemap/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: home-services
spec:
  selector:
    app: nginx
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
  - name: https
    protocol: TCP
    port: 443
    targetPort: 443
