apps/home-services/minecraft-bluemap/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minecraft-map-ingress
  namespace: home-services
spec:
  tls:
  - hosts:
    - minecraft.${DOMAIN_NAME}
    secretName: domain-com-tls
  rules:
  - host: minecraft.${DOMAIN_NAME}
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx
            port:
              number: 80
